--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.smartbell"
-    android:versionCode="1"
-    android:versionName="2.1.160204">
+    android:versionCode="2"
+    android:versionName="2.2.160610">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -26,7 +26,7 @@
 
 
         <activity
-            android:name=".bell_x3.DialogActivity"
+            android:name=".DialogActivity"
             android:label="@string/title_activity_dialog"
             android:theme="@style/AppTheme"></activity>
 
