--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 22
     buildToolsVersion '25.0.0'
 
     defaultConfig {
         applicationId "com.smartbell.smartbell"
         minSdkVersion 17
-        targetSdkVersion 23
-        versionCode 3
+        targetSdkVersion 22
+        versionCode 4
         versionName "2.3.0321"
     }
     buildTypes {
@@ -21,7 +21,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.2.1'
-    compile 'com.android.support:recyclerview-v7:23.2.1'
-    testCompile 'junit:junit:4.12'
+//    compile 'com.android.support:appcompat-v7:23.2.1'
+//    compile 'com.android.support:recyclerview-v7:23.2.1'
+//    testCompile 'junit:junit:4.12'
 }
